Moved to simplechartjs for the recent form pie chart and fixed the spacing due to bootstrap 4 changes

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -22,3 +22,7 @@ html, body {
   height: 100%;
   margin: 0;
 }
+
+.nav-tabs > li > a {
+  color: $wrecclesham-green;
+}
